--- a/contact.html
+++ b/contact.html
@@ -58,13 +58,13 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 4182652664
+                Call : +01 4185755541
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : sergeguetsa@gmail.com
+                Email : serge@gmail.com
               </span>
             </a>
             <a href="">
