--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 4185755541
+                Call : SERGE GUETSA at: +01 4185755541
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : ataxofack@gmail.com
+                Email : atazofack@gmail.com
               </span>
             </a>
             <a href="">
@@ -800,7 +800,7 @@
         <a href="">
           <i class="fa fa-envelope" aria-hidden="true"></i>
           <span>
-            Email : demo@gmail.com
+            Email : demoserge@gmail.com
           </span>
         </a>
         <a href="">
