--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : SERGE GUETSA at: +01 4185755541
+                Call : SERGE GUETSA SONKENG at: +01 4185755541
               </span>
             </a>
             <a href="">
