--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : SERGE GUETSA SONKENG at: +01 4185755541
+                Call : SERGE GUETSA SONKENG at : 4185755541
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : atazofack@gmail.com
+                Email : serge@gmail.com
               </span>
             </a>
             <a href="">
@@ -133,7 +133,7 @@
               </ul>
               <div class="quote_btn-container">
                 <a href="" class="quote_btn">
-                  Get A Quote
+                  Get A Quote for your business
                 </a>
               </div>
             </div>
@@ -153,7 +153,7 @@
                   <div class="detail-box">
                     <h1>
                       ARCHITECT <br>
-                      BUILDER CONSTRUCTION <br>
+                      SERGE GUETSA  CONSTRUCTION <br>
                       SERVICES
                     </h1>
                     <div class="btn-box">
@@ -176,7 +176,7 @@
                   <div class="detail-box">
                     <h1>
                       ARCHITECT <br>
-                      BUILDER CONSTRUCTION <br>
+                      SERGE GUETSA CONSTRUCTION <br>
                       SERVICES
                     </h1>
                     <div class="btn-box">
@@ -184,7 +184,7 @@
                         Contact Us
                       </a>
                       <a href="" class="btn2">
-                        About Us
+                        Learn more about us
                       </a>
                     </div>
                   </div>
@@ -199,7 +199,7 @@
                   <div class="detail-box">
                     <h1>
                       ARCHITECT <br>
-                      BUILDER CONSTRUCTION <br>
+                      SERGE GUETSA CONSTRUCTION <br>
                       SERVICES
                     </h1>
                     <div class="btn-box">
