--- a/index.html
+++ b/index.html
@@ -58,21 +58,15 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-<<<<<<< HEAD
                 Call : +01 4182652664
-=======
                 Call : SERGE GUETSA SONKENG at : 4185755541
->>>>>>> 97d4386730a6c30c20ddb13be14355f861232a71
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-<<<<<<< HEAD
-                Email : sergezofack@gmail.com
-=======
+                Email : sergezo@gmail.com
                 Email : serge@gmail.com
->>>>>>> 97d4386730a6c30c20ddb13be14355f861232a71
               </span>
             </a>
             <a href="">
